# NURBS_Skinning

./: CMakeLists.txt
include/: GLProgram.h
include/student/: evaluate.h
src/: GLProgram.cpp  Shader.cpp  main.cpp
